# memory-pool

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  LICENSE  README.md  develop_plan.md  todo_list.md
docs/api/: README.md
docs/design/: architecture.md  performance_guidelines.md
docs/examples/: best_practices.md  cross_platform.md  getting_started.md
examples/: advanced_usage.cpp  basic_usage.cpp  custom_allocator_example.cpp  gpu_examples.cpp  pmem_examples.cpp
include/memory_pool/: common.hpp  config.hpp  memory_pool.hpp
include/memory_pool/cpu/: cpu_memory_pool.hpp  fixed_size_allocator.hpp  variable_size_allocator.hpp
include/memory_pool/custom/: custom_allocator.hpp  custom_memory_pool.hpp  custom_types.hpp  rdma_allocator.hpp
include/memory_pool/gpu/: cuda_allocator.hpp  cuda_utils.hpp  gpu_memory_pool.hpp
include/memory_pool/pmem/: pmem_fixed_size_allocator.hpp  pmem_memory_pool.hpp  pmem_variable_size_allocator.hpp
include/memory_pool/stats/: memory_stats.hpp
include/memory_pool/utils/: debug_tools.hpp  error_handling.hpp  numa_utils.hpp  platform_utils.hpp  thread_safety.hpp
plans/: README.md  profiling_implementation_checklist.md  profiling_implementation_plan.md  profiling_use_cases_and_examples.md
src/: common.cpp  memory_pool_manager.cpp
src/cpu/: cpu_memory_pool.cpp  fixed_size_allocator.cpp  variable_size_allocator.cpp
src/custom/: custom_allocator.cpp  custom_memory_pool.cpp  rdma_allocator.cpp
src/gpu/: cuda_allocator.cpp  cuda_utils.cpp  gpu_memory_pool.cpp
src/pmem/: pmem_fixed_size_allocator.cpp  pmem_memory_pool.cpp  pmem_variable_size_allocator.cpp
src/stats/: memory_stats.cpp
src/utils/: debug_tools.cpp  error_handling.cpp  numa_utils.cpp  platform_utils.cpp  thread_safety.cpp
tests/integration/: cpu_gpu_integration_tests.cpp
tests/performance/: comparison_benchmarks.cpp  cpu_benchmarks.cpp  gpu_benchmarks.cpp
tests/unit/: cpu_tests.cpp  custom_allocator_tests.cpp  fuzz_tests.cpp  gpu_tests.cpp  manager_tests.cpp  multi_gpu_tests.cpp  numa_tests.cpp  pmem_tests.cpp
